plugins {
    id "java"
    id "application"
    id "org.openjfx.javafxplugin" version "0.1.0"
}

repositories {
    mavenCentral()
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

application {
    mainClass = "io.github.contrib.SuperMarioBrosMain"
    mainModule = "io.github.contrib"
    applicationDefaultJvmArgs = ["--enable-native-access=javafx.graphics"]
}

javafx {
    version = "17.0.8"
    modules = ["javafx.graphics", "javafx.controls"]
}